--- a/Django/django_course/static/blog/css/layout.css
+++ b/Django/django_course/static/blog/css/layout.css
@@ -3,7 +3,7 @@
     width: 100%;
     border-bottom: 1px solid;
     z-index: 1;
-    height: 6%;
+    height: 8%;
     display: flex;
     background: white;
 }
@@ -31,8 +31,11 @@
     background: lightblue;
 }
 
-.btn, .log_out_form {
-    margin-right: 10%;
+.btn {
+    margin-left: 2%;
+}
+.log_out_form {
+    margin-right: 2%;
 }
 
 body {
